--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,44 @@
 
 # IDE
 .vscode/
+
+# Variables d'environnement (IMPORTANT : contient les clés API)
+.env
+.env.local
+.env.*.local
+backend/.env
+backend/.env.local
+
+# Node modules
+node_modules/
+backend/node_modules/
+Staily-Front/node_modules/
+
+# Logs
+*.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# Cache
+.cache/
+backend/cache/
+.next/
+out/
+
+# Fichiers temporaires
+tmp/
+backend/tmp/
+*.tmp
+*.temp
+
+# OS
+.DS_Store
+Thumbs.db
+
+# Uploads (fichiers utilisateurs)
+backend/uploads/
+uploads/
+SYSTEM_SUMMARY.txt
+RESTART_BACKEND.sh
+backend/test-cache.sh
