--- a/backend/package.json
+++ b/backend/package.json
@@ -7,13 +7,21 @@
     "start": "node server.js",
     "dev": "nodemon server.js"
   },
-  "keywords": ["express", "upload", "multer", "audio", "video"],
+  "keywords": [
+    "express",
+    "upload",
+    "multer",
+    "audio",
+    "video"
+  ],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "cors": "^2.8.5",
+    "dotenv": "^17.2.3",
     "express": "^4.18.2",
     "multer": "^1.4.5-lts.1",
-    "cors": "^2.8.5"
+    "openai": "^4.104.0"
   },
   "devDependencies": {
     "nodemon": "^3.0.2"
