improve session storage cleanup

--- a/.gitignore
+++ b/.gitignore
@@ -44,3 +44,20 @@ uploads/
 SYSTEM_SUMMARY.txt
 RESTART_BACKEND.sh
 backend/test-cache.sh
+export_guide.sh
+GUIDE_STAILY_COMPLET.zip
+diagrams_architecture/architecture_backend_1764866035823.png
+diagrams_architecture/architecture_frontend_1764866096987.png
+diagrams_architecture/architecture_generale_1764865975579.png
+diagrams_architecture/cache_system_1764866165937.png
+diagrams_architecture/data_flow_1764866125317.png
+diagrams_architecture/pipeline_transcription_1764866002294.png
+GUIDE_EXPORT/convert_to_pdf.sh
+GUIDE_EXPORT/index.html
+GUIDE_EXPORT/diagrams/architecture_backend_1764866035823.png
+GUIDE_EXPORT/diagrams/architecture_frontend_1764866096987.png
+GUIDE_EXPORT/diagrams/architecture_generale_1764865975579.png
+GUIDE_EXPORT/diagrams/cache_system_1764866165937.png
+GUIDE_EXPORT/diagrams/data_flow_1764866125317.png
+GUIDE_EXPORT/diagrams/pipeline_transcription_1764866002294.png
+.gitignore
